# ompulsar

./: .gitmodules  CMakeLists.txt  README.md  messages.out  rsyslog.conf
src/: defines.h  ompulsar.c
